--- a/public/contact.css
+++ b/public/contact.css
@@ -82,3 +82,9 @@ body {
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
       }
+
+    
+
+      .navigator-btn{
+        font-size: 1.2rem;
+      }
