--- a/public/landing.css
+++ b/public/landing.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+html{
+  overflow: hidden;
+}
 
 :root {
   --primary-color: rgba(104, 82, 226, 0.5);
@@ -20,7 +23,6 @@
 body {
   font-family: var(--custom-font);
   line-height: 1.4;
-  background-attachment: fixed;
 }
 
 .container {
@@ -35,7 +37,6 @@ body {
   color: #E8E2E2;
   height: 100vh;
   position: relative;
-  background-attachment: fixed;
 }
 
 .showcase::before {
@@ -48,7 +49,6 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-attachment: fixed;
 }
 .showcase .showcase-inner {
   display: flex;
@@ -97,4 +97,8 @@ body {
   .featurette-heading {
     font-size: 50px;
   }
+}
+
+.hamburger{
+  position: sticky;
 }
