--- a/public/landing.css
+++ b/public/landing.css
@@ -3,10 +3,11 @@
   margin: 0;
   padding: 0;
 }
+/*
 html{
   overflow: hidden;
   background-color: var(--overlay-color);
-}
+}*/
 
 :root {
   --primary-color: rgba(104, 82, 226, 0.5);
@@ -99,5 +100,3 @@ body {
     font-size: 50px;
   }
 }
-
-#loadOverlay{display: none;}
